api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: develop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      name: api-pods
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: nginx:1.22.0
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: develop
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 80
