web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: develop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: web-pods
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: nginx:1.22.0
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: develop
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
