www.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-deployment
  namespace: develop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      name: www-pods
      labels:
        app: www
    spec:
      containers:
        - name: www
          image: nginx:1.22.0
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            readOnly: true
            name: www-index
      volumes:
      - name: www-index
        configMap:
          name: www-index # place ConfigMap `www-index` on /usr/share/nginx/html
          items:
            - key: index.html
              path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: www-service
  namespace: develop
spec:
  type: ClusterIP
  selector:
    app: www
  ports:
    - port: 80
      targetPort: 80
